feat: write files atomically in edit and write_file tools